Fix: alignment About-Us and Plans sections

--- a/css/style.css
+++ b/css/style.css
@@ -54,9 +54,12 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: var(--gris);
     margin: 50px 0px;
     padding: 50px 0px;
+}
+
+.page-section #Benefits{
+    background-color: var(--gris);
 }
 .page-section .h2{
     text-align: center;
@@ -316,9 +319,9 @@ header section button {
     font-weight: 600;
     font-size: 48px;
     line-height: 150px;
-    margin-left: 149px;
+
     margin-top: -100px;
-    
+
 }
 
 .subtitlec{
@@ -455,7 +458,7 @@ header section button {
 
 
 .title{
-    
+
     font-family: sans-serif;
     font-size: 30px;
     color: #1D3557;
